tests/valid/trait/method_call_short_ufcs.facet
trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> () {
    ()
  }
}

fn main(x: unrestricted isize) -> unrestricted () {
  (Runner::run x)
}
