tests/invalid/trait/impl_for_unknown_type.facet
trait Show;

impl Show for unrestricted Missing;

fn main() -> unrestricted () {
  ()
}
